--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "mcp-watermarks"
-version = "0.1.0"
+name = "mcp-stampit"
+version = "0.1.4"
 description = "A lightweight MCP component for adding text watermarks to pictures"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -17,8 +17,8 @@ dependencies = [
 ]
 
 [project.scripts]
-mcp-watermarks = "mcp_watermarks:main"
+mcp-stampit = "mcp_stampit:main"
 
 [project.urls]
-"Homepage" = "https://github.com/LiuHao-1443/mcp-watermarks"
-"Bug Tracker" = "https://github.com/LiuHao-1443/mcp-watermarks/issues"
+"Homepage" = "https://github.com/LiuHao-1443/stampit"
+"Bug Tracker" = "https://github.com/LiuHao-1443/stampit/issues"
