--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mcp-stampit"
-version = "0.1.4"
+version = "0.1.7"
 description = "A lightweight MCP component for adding text watermarks to pictures"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -17,7 +17,14 @@ dependencies = [
 ]
 
 [project.scripts]
-mcp-stampit = "mcp_stampit:main"
+mcp-stampit = "main:main"
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "."}
 
 [project.urls]
 "Homepage" = "https://github.com/LiuHao-1443/stampit"
