--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "mcp-stampit"
-version = "0.1.7"
+name = "netmind-mcp-stampit"
+version = "1.1.0"
 description = "A lightweight MCP component for adding text watermarks to pictures"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 authors = [
     {name = "Liu Hao", email = "liu.hao1443@gmail.com"}
 ]
@@ -13,11 +13,16 @@ dependencies = [
     "pillow>=10.0.0",
     "requests>=2.31.0",
     "pydantic>=2.0.0",
-    "pytest>=7.0.0"
+    "pytest>=7.0.0",
+    "boto3>=1.34.0",
+    "uuid>=1.30"
 ]
 
 [project.scripts]
-mcp-stampit = "main:main"
+netmind-mcp-stampit = "main:main"
+
+[project.entry-points."uvx"]
+netmind-mcp-stampit = "main:main"
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
